--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Océane - Art Portfolio</title>
+    <title>Océane - Art Community</title>
     <link href="https://fonts.cdnfonts.com/css/etna" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -57,16 +57,12 @@
                 <label class="radio-option"><input type="radio" name="cat" value="digital" checked> <span>Digital</span></label>
                 <label class="radio-option"><input type="radio" name="cat" value="traditionnel"> <span>Traditionnel</span></label>
             </div>
-            <button class="btn-send" onclick="finalizePost()">Publier la photo</button>
+            <button class="btn-send" id="btnFinalPublish" onclick="finalizePost()">Publier la photo</button>
         </div>
     </div>
 
     <div id="commentDrawer" class="drawer">
-        <div class="drawer-header">
-            <div class="handle"></div>
-            <h3>Commentaires</h3>
-            <span class="close-drawer" onclick="closeComments()">&times;</span>
-        </div>
+        <div class="drawer-header"><div class="handle"></div><h3>Commentaires</h3><span class="close-drawer" onclick="closeComments()">&times;</span></div>
         <div id="commentList" class="drawer-body"></div>
         <div class="drawer-footer">
             <input type="text" id="comInput" placeholder="Ajouter un commentaire...">
@@ -75,6 +71,33 @@
     </div>
     <div id="shade" class="shade" onclick="closeComments()"></div>
 
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, updateDoc, doc, arrayUnion, increment } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyAkFr10-xPzhZNlJwmP8a7-nHZnpdwECQ0",
+            authDomain: "ocean-s-new-artists-club.firebaseapp.com",
+            projectId: "ocean-s-new-artists-club",
+            storageBucket: "ocean-s-new-artists-club.firebasestorage.app",
+            messagingSenderId: "760339514728",
+            appId: "1:760339514728:web:69d6e778db4b92577d82dd"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        window.db = getFirestore(app);
+        window.storage = getStorage(app);
+        window.fbMethods = { collection, addDoc, onSnapshot, query, orderBy, updateDoc, doc, arrayUnion, increment, ref, uploadBytes, getDownloadURL };
+        
+        // Attendre que l'objet window.db soit peuplé avant de charger les posts
+        const checkFirebase = setInterval(() => {
+            if (window.db && typeof loadAllPosts === "function") {
+                loadAllPosts();
+                clearInterval(checkFirebase);
+            }
+        }, 100);
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
