--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, updateDoc, doc, arrayUnion, increment } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+    // NOTE: Firebase API keys are meant to be public in client-side code.
+    // Security is handled by Firestore Security Rules, not by hiding the API key.
+    // See SECURITY.md for details on setting up proper security rules.
     const firebaseConfig = {
         apiKey: "AIzaSyAkFr10-xPzhZNlJwmP8a7-nHZnpdwECQ0",
         authDomain: "ocean-s-new-artists-club.firebaseapp.com",
